--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,3 +5,12 @@
     box-sizing: border-box;
     font-family: 'Montserrat';
 }
+
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: currentColor;
+}
