--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,3 +6,12 @@
     box-sizing: border-box;
     font-family: 'Montserrat';
 }
+
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: currentColor;
+}
