--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,3 +14,11 @@ a {
     text-decoration: none;
     color: currentColor;
 }
+
+::-moz-selection {
+    background-color: pink;
+}
+
+::selection {
+    background-color: pink;
+}
