--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,3 +19,25 @@ a {
 ::selection {
     background-color: pink;
 }
+
+.event-bubble {
+    position: fixed;
+    top: 15px;
+    right: -100%;
+    backdrop-filter: blur(5px);
+    z-index: 10;
+    padding: 10px 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    transition: .8s;
+}
+
+.event-bubble.added {
+    background-color: #c5a11198;
+    color: white;
+}
+
+.event-bubble.removed {
+    background-color: #005f6e92;
+    color: white;
+}
